--- a/src/styles/components/_Main.scss
+++ b/src/styles/components/_Main.scss
@@ -1,8 +1,3 @@
 .main {
-  max-width: 1200px;       
-  margin: 0 auto;           
-  padding: 20px;            
-  display: flex;            
-  flex-direction: column;    
-  min-height: 100vh;        
+  padding-top: 80px; // misma altura que el header
 }
